[gd_scene load_steps=6 format=2]

[ext_resource path="res://dev/scripts/short_ans.gd" type="Script" id=1]
[ext_resource path="res://asserts/themes/main_theme.tres" type="Theme" id=2]

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/360_F_323124237_SfGqpttZqU2mrMm61VPSWA2tKvc95l9O.jpg-aacced3f025bf093d2f73d2f8022a7db.stex"

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.14902, 0.027451, 0.027451, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="TextureRct" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 6.0
margin_right = 15.0
margin_bottom = 6.0
texture = SubResource( 2 )
expand = true

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -448.0
margin_top = -235.0
margin_right = 398.0
margin_bottom = 238.0

[node name="qn" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -417.0
margin_top = 141.0
margin_right = 424.0
margin_bottom = 194.0
size_flags_vertical = 1
custom_styles/normal = SubResource( 1 )
text = "Question 1
"
align = 1

[node name="ansEdit" type="LineEdit" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -215.0
margin_top = -2.5
margin_right = 212.0
margin_bottom = 57.5
custom_styles/normal = SubResource( 3 )
align = 1
placeholder_text = "Answer..."

[node name="nextBtn" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.968
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -228.0
margin_top = -37.864
margin_right = 220.0
margin_bottom = -10.0
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
text = "Next"

[connection signal="text_changed" from="Panel/ansEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="Panel/nextBtn" to="." method="_on_nextBtn_pressed"]
